k8slearn/5.Kubernetes 网络/5.6.Traefik/Canary/wrr-ingressroute.yaml
# wrr-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wrr-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wrr.qikqiak.com`)
      kind: Rule
      services:
        - name: app-wrr
          kind: TraefikService
